examples/compiler_errors/adversarial/common_dev_mistakes/UnknownIdentifierTypo.flx
module UnknownIdentifierTypo {
    fn bad() -> Unit with IO {
        prnit("x")
    }
}
